login update and logout logic added

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -24,19 +24,20 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
-.details-button {
-  background: rgb(168, 204, 110);
+.details-button-logged-in {
+  background: rgb(88, 144, 190);
   color: white;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
 }
-.login-button {
-  background: rgb(111, 111, 184);
-  color: white;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+.details-button-logged-in:hover {
+  background: rgb(68, 124, 170);
+}
+
+.details-button-logged-out {
+  background: rgb(210, 210, 210);
+  color: rgb(221, 213, 213);
+  cursor: not-allowed;
+}
+.details-button-logged-out:hover {
+  background: rgba(255, 255, 255, 0.349);
+
 }
